source/tests/errors/wrong_arg_count.apex
function f(a, b)
    return a

f(1, 2, 3)